...
      setSelectedDate(_selectedDate);
      setselectedDateWithFormat(formatToDatePickerLabel(_selectedDate));
    }
  };

  return (
    <View testID="dateScreen" style={styles.wrapper}>
      <ArrowBackButton onPress={onArrowBackButtonPressed} />
      <Image
        resizeMode="cover"
        source={headerImage}
        style={styles.headerImage}
      />
...
          onChange={onChange}
        />
      )}
      <Container style={styles.container}>
        <Heading text={`When is your baby due, ${user?.name}?`} />
        <DatePickerLabel
          testID="datePickerLabel"
          onPress={onShowDatePickerPressed}
          text={selectedDateWithFormat}
        />

        <View style={styles.buttonContainer}>
          <ButtonStyled
...
